--- a/jsbin.cuqudem.2.html
+++ b/jsbin.cuqudem.2.html
@@ -53,7 +53,7 @@ function colorClock(){
   }
 
 var clockFace = hours + ':' + minutes + ':' + seconds;
-var hexColor = '#' + 'ff' + minutes + seconds;
+var hexColor = '#' + hours + minutes + seconds;
 document.getElementById('clock').innerHTML = clockFace;
 document.body.style.background = hexColor;
   
